--- a/index.html
+++ b/index.html
@@ -2,20 +2,48 @@
 
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RICK AND MORTY APPLICATION</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js"></script>
   </head>
-  <title>RICK AND MORTY APPLICATION</title>
+
   <body>
+    <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
+    
+    <form id"search-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name">
+
+      <label for="gender">Gender</label>
+      <select>
+        <option>Male</option>
+        <option>Female</option>
+      </select>
+
+      <label for="status">Life Status</label>
+      <select>
+        <option>Alive</option>
+        <option>Dead</option>
+        <option>Unknown</option>
+      </select>
+
+      <label for="species">Species</label>
+      <select>
+        <option>Human</option>
+        <option>Alien</option>
+      </select>
+
+      <button>Submit</button>
+
+    </form>
    
     
     <script src="" async defer></script>
