--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+  <style>
+  </style>
   </head>
 
   <body>
     <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
-    
+    <style>
+      body {
+        background-image: url("Images/rickandmorty.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+    </style>
     <form id"search-form">
       <label for="name">Name</label>
       <input type="text" id="name" name="name">
