--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     <title>RICK AND MORTY APPLICATION</title>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <link rel="manifest" href="/site.webmanifest">
-  <style>
-  </style>
   </head>
 
   <body>
@@ -26,34 +22,32 @@
         background-repeat: no-repeat;
       }
     </style>
-    <form id"search-form">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name">
-
-      <label for="gender">Gender</label>
-      <select>
-        <option>Male</option>
-        <option>Female</option>
-      </select>
-
-      <label for="status">Life Status</label>
-      <select>
-        <option>Alive</option>
-        <option>Dead</option>
-        <option>Unknown</option>
-      </select>
-
-      <label for="species">Species</label>
-      <select>
-        <option>Human</option>
-        <option>Alien</option>
-      </select>
-
-      <button>Submit</button>
-
-    </form>
-   
-    
-    <script src="" async defer></script>
+    <section class="container">
+      <form id="search-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
+        <br>
+        <label for="gender">Gender</label>
+        <select>
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+        <br>
+        <label for="status">Life Status</label>
+        <select>
+          <option>Alive</option>
+          <option>Dead</option>
+          <option>Unknown</option>
+        </select>
+        <br>
+        <label for="species">Species</label>
+        <select>
+          <option>Human</option>
+          <option>Alien</option>
+        </select>
+        <br>
+        <button>Submit</button>
+      </section>
+      </form>
   </body>
 </html>
