--- a/index.html
+++ b/index.html
@@ -21,26 +21,31 @@
         background-size: cover;
         background-repeat: no-repeat;
       }
+
+      
+      
     </style>
     <section class="container">
       <form id="search-form">
-        <label for="name">Name</label>
+        <label for="name">NAME</label>
         <input type="text" id="name" name="name">
         <br>
-        <label for="gender">Gender</label>
+        <label for="gender">GENDER</label>
+        <br>
         <select>
           <option>Male</option>
           <option>Female</option>
         </select>
         <br>
-        <label for="status">Life Status</label>
+        <label for="status">LIFE STATUS</label>
         <select>
           <option>Alive</option>
           <option>Dead</option>
           <option>Unknown</option>
         </select>
         <br>
-        <label for="species">Species</label>
+        <label for="species">SPECIES</label>
+        <br>
         <select>
           <option>Human</option>
           <option>Alien</option>
