--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RICK AND MORTY APPLICATION</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js"></script>
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
-  </head>
 
-  <body>
-    <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
-    <style>
-      body {
-        background-image: url("Images/rickandmorty.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-      }
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>RICK AND MORTY APPLICATION</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="main.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
+</head>
 
-      
-      
-    </style>
-    <section class="container">
-      <form id="search-form">
-        <label for="name">NAME</label>
-        <input type="text" id="name" name="name">
-        <br>
-        <label for="gender">GENDER</label>
-        <br>
-        <select>
-          <option>Male</option>
-          <option>Female</option>
-        </select>
-        <br>
-        <label for="status">LIFE STATUS</label>
-        <select>
-          <option>Alive</option>
-          <option>Dead</option>
-          <option>Unknown</option>
-        </select>
-        <br>
-        <label for="species">SPECIES</label>
-        <br>
-        <select>
-          <option>Human</option>
-          <option>Alien</option>
-        </select>
-        <br>
-        <button>Submit</button>
-      </section>
-      </form>
-  </body>
+<body>
+  <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
+  <style>
+    body {
+      background-image: url("Images/rickandmorty.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+      @font-face {
+      font-family: 'Jedi';
+      src: url('font/StarJediOutline-y0xm.ttf');
+    }
+  </style>
+
+  <section class="container">
+    <form id="search-form">
+      <label for="name">NAME</label>
+      <input type="text" id="name" name="name">
+      <br>
+      <label for="gender">GENDER</label>
+      <br>
+      <select>
+        <option>Male</option>
+        <option>Female</option>
+      </select>
+      <br>
+      <label for="status">LIFE STATUS</label>
+      <select>
+        <option>Alive</option>
+        <option>Dead</option>
+        <option>Unknown</option>
+      </select>
+      <br>
+      <label for="species">SPECIES</label>
+      <br>
+      <select>
+        <option>Human</option>
+        <option>Alien</option>
+      </select>
+      <br>
+      <button>Submit</button>
+  </section>
+  </form>
+</body>
+
 </html>
