--- a/generatorpage.html
+++ b/generatorpage.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RICK AND MORTY APPLICATION</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="main.js"></script>
+  <link rel="welcome" href="welcome.html">
+  <script src="generatorpage.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -22,14 +22,14 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
-      @font-face {
+      /* @font-face {
       font-family: 'Jedi';
-      src: url('font/StarJediOutline-y0xm.ttf');
-    }
+      src: url('font/StarJediOutline-y0xm.ttf');} */
+
   </style>
 
   <section class="container">
-    <form id="search-form">
+    <form>
       <label for="name">NAME</label>
       <input type="text" id="name" name="name">
       <br>
