--- a/generatorpage.html
+++ b/generatorpage.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RICK AND MORTY APPLICATION</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="generator.css">
   <link rel="welcome" href="welcome.html">
   <script src="generatorpage.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
@@ -29,7 +29,7 @@
   </style>
 
   <section class="container">
-    <form>
+    <form for="character" id="character">
       <label for="name">NAME</label>
       <input type="text" id="name" name="name">
       <br>
