--- a/generatorpage.html
+++ b/generatorpage.html
@@ -29,8 +29,9 @@
   </style>
 
   <section class="container">
-    <form for="character" id="character">
+    <form id="character">
       <label for="name">NAME</label>
+      <br>
       <input type="text" id="name" name="name">
       <br>
       <label for="gender">GENDER</label>
@@ -41,6 +42,7 @@
       </select>
       <br>
       <label for="status">LIFE STATUS</label>
+      <br>
       <select>
         <option>Alive</option>
         <option>Dead</option>
