--- a/generator-docs/generatorpage.html
+++ b/generator-docs/generatorpage.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RICK AND MORTY APPLICATION</title>
   <link rel="stylesheet" href="./generator.css">
-  <script defer src="./generator.css"></script>
+  <script defer src="./generatorpage.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
 </head>
 
