trying to fix link

--- a/generator-docs/index.html
+++ b/generator-docs/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RICK AND MORTY APPLICATION</title>
-  <link rel="stylesheet" href="./generator.css">
-  <script defer src="./generatorpage.js"></script>
+  <link rel="stylesheet" href="generator-docs/generator.css">
+  <script defer src="generator-docs/generatorpage.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
 </head>
 
