--- a/generator-docs/index.html
+++ b/generator-docs/index.html
@@ -10,11 +10,11 @@
   <title>RICK AND MORTY APPLICATION</title>
   <link rel="stylesheet" href="./generator.css">
   <script defer src="./generatorpage.js"></script>
-  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon.ico">
 </head>
 
 <body>
-  <h2 class="header"> RICK AND MORTY CHARACTER GENERATOR </h2>
+  <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
   <style>
     body {
       background-image: url("/Images/rickandmorty.jpg");
@@ -55,7 +55,6 @@
       <button id="submit">Submit</button>
       </br>
     </form>
-    <div class="image-container"></div>
   </section>
 
   <div class="image-container"></div>
