--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1> RICK AND MORTY CHARACTER GENERATOR </h1>
   <style>
     body {
-      background-image: url("Images/rickandmorty.jpg");
+      background-image: url("https://i.imgur.com/jIPbXzX.png");
       background-size: cover;
       background-repeat: no-repeat;
     }
