--- a/generator-docs/index.html
+++ b/generator-docs/index.html
@@ -10,7 +10,7 @@
   <title>RICK AND MORTY APPLICATION</title>
   <link rel="stylesheet" href="./generator.css">
   <script defer src="./generatorpage.js"></script>
-  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://imgur.com/DooOPOD">
 </head>
 
 <body>
@@ -55,9 +55,9 @@
       <button id="submit">Submit</button>
       </br>
     </form>
+    <div class="image-container"></div>
   </section>
 
-  <div class="image-container"></div>
 
 
 </body>
