--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RICK AND MORTY APPLICATION</title>
   <link rel="stylesheet" href="./welcome-docs/welcome.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://imgur.com/DooOPOD">
 </head>
 
 <body>
